--- a/web-ble.html
+++ b/web-ble.html
@@ -23,7 +23,7 @@
   <button id="disconnectBleButton">Disconnect BLE Device</button>
   <p>BLE state: <strong><span id="bleState" style="color:#d13a30;">Disconnected</span></strong></p>
   <h2>Fetched Value</h2>
-  <p><span id="valueContainer">NaN</span></p>
+  <p><span id="valueContainer">???</span></p>
   <p>Last reading: <span id="timestamp"></span></p>
   <h2>Control GPIO 2</h2>
   <button id="onButton">ON</button>
