--- a/web-ble-bme280.html
+++ b/web-ble-bme280.html
@@ -31,21 +31,21 @@
         </div>
         <div class="card-grid">
             <div class="card">
-                <h2>Fetched Value</h2>
+                <h2>BME280 temperatur / humidity</h2>
                 <p class="reading"><span id="valueContainer">NaN</span></p>
                 <p class="gray-label">Last reading: <span id="timestamp"></span></p>
             </div>
 
             <div class="card">
                 <h2>Control RGB LED</h2>
-                <button id="onRedButton" class="onButton">R ON</button>
-                <button id="offRedButton" class="offButton">R OFF</button>
-                <button id="onGreenButton" class="onButton">G ON</button>
-                <button id="offGreenButton" class="offButton">G OFF</button>
-                <button id="onBlueButton" class="onButton">B ON</button>
-                <button id="offBlueButton" class="offButton">B OFF</button>
+                <button id="onRButton" class="onButton">R ON</button>
+                <button id="offRButton" class="offButton">R OFF</button>
+                <button id="onGButton" class="onButton">G ON</button>
+                <button id="offGButton" class="offButton">G OFF</button>
+                <button id="onBButton" class="onButton">B ON</button>
+                <button id="offBButton" class="offButton">B OFF</button>
                 <button id="offButton" class="offButton">ALL OFF</button>
-                <p class="gray-label">Last temperature / humidity values sent: <span id="valueSent"></span></p>
+                <p class="gray-label">Last value sent: <span id="valueSent"></span></p>
             </div>
         </div>
     </div>
