--- a/web-ble-bme280.html
+++ b/web-ble-bme280.html
@@ -31,20 +31,24 @@
         </div>
         <div class="card-grid">
             <div class="card">
-                <h2>BME280 temperatur / humidity</h2>
+                <h2>Temperature / Humidity</h2>
                 <p class="reading"><span id="valueContainer">NaN</span></p>
                 <p class="gray-label">Last reading: <span id="timestamp"></span></p>
             </div>
 
             <div class="card">
                 <h2>Control RGB LED</h2>
-                <button id="onRButton" class="onButton">R ON</button>
-                <button id="offRButton" class="offButton">R OFF</button>
-                <button id="onGButton" class="onButton">G ON</button>
-                <button id="offGButton" class="offButton">G OFF</button>
-                <button id="onBButton" class="onButton">B ON</button>
-                <button id="offBButton" class="offButton">B OFF</button>
-                <button id="offButton" class="offButton">ALL OFF</button>
+                  <p>
+                    <button id="onRButton" class="onButton">R ON</button>
+                    <button id="offRButton" class="offButton">R OFF</button>
+                    <button id="onGButton" class="onButton">G ON</button>
+                    <button id="offGButton" class="offButton">G OFF</button>
+                  </p>
+                  <p>
+                    <button id="onBButton" class="onButton">B ON</button>
+                    <button id="offBButton" class="offButton">B OFF</button>
+                    <button id="offButton" class="offButton">ALL OFF</button>
+                  <p>
                 <p class="gray-label">Last value sent: <span id="valueSent"></span></p>
             </div>
         </div>
