--- a/webtest.html
+++ b/webtest.html
@@ -85,7 +85,7 @@
 	navigator.bluetooth.requestDevice({
             acceptAllDevices: true
 	    //filters: [{name: deviceName}],
-	    //optionalServices: [bleService]
+	    optionalServices: ['19b10000-e8f2-537e-4f6c-d104768a1214']
 	})
 	.then(device => {
 	    console.log('Device Selected:', device.name);
