--- a/webtest.html
+++ b/webtest.html
@@ -83,9 +83,9 @@
     function connectToDevice(){
 	console.log('Initializing Bluetooth...');
 	navigator.bluetooth.requestDevice({
-            acceptAllDevices: true,
-	    //filters: [{name: deviceName}],
-	    optionalServices: ["19b10000-e8f2-537e-4f6c-d104768a1214"],
+            //acceptAllDevices: true,
+	    filters: [{namePrefix: 'ESP32'}],
+	    optionalServices: ['19b10000-e8f2-537e-4f6c-d104768a1214'],
 	})
 	.then(device => {
 	    console.log('Device Selected:', device.name);
