--- a/webtest.html
+++ b/webtest.html
@@ -1,6 +1,6 @@
 <!--
-  web-ble.html
-  klin, 19.11.2023
+  pm-18-web-ble.html
+  klin, 21.11.2023
 
   stolen from:
   Rui Santos
@@ -13,21 +13,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test ESP32 Web BLE App</title>
+    <title>PM-18-BLE-ESP32-DEMO1-NEU</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="">
 </head>
 <body>
-  <h1>Test ESP32 Web BLE Application</h1>
+  <h1>PM-18-BLE-ESP32-DEMO1-NEU</h1>
   <button id="connectBleButton">Connect to BLE Device</button>
   <button id="disconnectBleButton">Disconnect BLE Device</button>
   <p>BLE state: <strong><span id="bleState" style="color:#d13a30;">Disconnected</span></strong></p>
-  <h2>Fetched Value</h2>
+  <h2>Read Value</h2>
   <p><span id="valueContainer">???</span></p>
   <p>Last reading: <span id="timestamp"></span></p>
-  <h2>Control GPIO 2</h2>
+  <h2>Control LED</h2>
   <button id="onButton">ON</button>
   <button id="offButton">OFF</button>
+  <button id="toggleButton">TOGGLE</button>
   <p>Last value sent: <span id="valueSent"></span></p>
   <p><a href="https://randomnerdtutorials.com/">Created by RandomNerdTutorials.com</a></p>
   <p><a href="https://RandomNerdTutorials.com/esp32-web-bluetooth/">Read the full project here.</a></p>
@@ -38,6 +39,7 @@
     const disconnectButton = document.getElementById('disconnectBleButton');
     const onButton = document.getElementById('onButton');
     const offButton = document.getElementById('offButton');
+    const toggleButton = document.getElementById('toggleButton');
     const retrievedValue = document.getElementById('valueContainer');
     const latestValueSent = document.getElementById('valueSent');
     const bleStateContainer = document.getElementById('bleState');
@@ -45,9 +47,12 @@
 
     //Define BLE Device Specs
     var deviceName ='ESP32';
-    var bleService = '19b10000-e8f2-537e-4f6c-d104768a1214';
-    var ledCharacteristic = '19b10002-e8f2-537e-4f6c-d104768a1214';
-    var sensorCharacteristic= '19b10001-e8f2-537e-4f6c-d104768a1214';
+    //var bleService = '19b10000-e8f2-537e-4f6c-d104768a1214';
+    //var ledCharacteristic = '19b10002-e8f2-537e-4f6c-d104768a1214';
+    //var sensorCharacteristic= '19b10001-e8f2-537e-4f6c-d104768a1214';
+    var bleService = '0000ffe0-0000-1000-8000-00805f9b34fb';
+    var ledCharacteristic = '0000ffe1-0000-1000-8000-00805f9b34fb';
+    var sensorCharacteristic = '0000ffe1-0000-1000-8000-00805f9b34fb';
 
     //Global Variables to Handle Bluetooth
     var bleServer;
@@ -64,11 +69,12 @@
     // Disconnect Button
     disconnectButton.addEventListener('click', disconnectDevice);
 
-    // Write to the ESP32 LED Characteristic
-    onButton.addEventListener('click', () => writeOnCharacteristic(1));
-    offButton.addEventListener('click', () => writeOnCharacteristic(0));
-
-    // Check if BLE is available in your Browser
+    // Write to the ESP32 LED Characteristic: - on, + off, #  toggle
+    onButton.addEventListener('click', () => writeOnCharacteristic(43));
+    offButton.addEventListener('click', () => writeOnCharacteristic(45));
+    toggleButton.addEventListener('click'. () => writeOnCharacteristic(35));
+    
+// Check if BLE is available in your Browser
     function isWebBluetoothEnabled() {
 	if (!navigator.bluetooth) {
 	    console.log("Web Bluetooth API is not available in this browser!");
@@ -84,8 +90,8 @@
 	console.log('Initializing Bluetooth...');
 	navigator.bluetooth.requestDevice({
             //acceptAllDevices: true,
-	    filters: [{namePrefix: 'ESP32'}],
-	    optionalServices: ['19b10000-e8f2-537e-4f6c-d104768a1214'],
+	    filters: [{namePrefix: deviceName}],
+	    optionalServices: [bleService],
 	})
 	.then(device => {
 	    console.log('Device Selected:', device.name);
