--- a/webtest.html
+++ b/webtest.html
@@ -72,7 +72,7 @@
     // Write to the ESP32 LED Characteristic: - on, + off, #  toggle
     onButton.addEventListener('click', () => writeOnCharacteristic(43));
     offButton.addEventListener('click', () => writeOnCharacteristic(45));
-    toggleButton.addEventListener('click'. () => writeOnCharacteristic(35));
+    toggleButton.addEventListener('click', () => writeOnCharacteristic(35));
     
 // Check if BLE is available in your Browser
     function isWebBluetoothEnabled() {
