--- a/pm-18-ble-esp32-demo1-neu.html
+++ b/pm-18-ble-esp32-demo1-neu.html
@@ -207,7 +207,7 @@
 	var minutes = ("00" + currentdate.getMinutes()).slice(-2);
 	var seconds = ("00" + currentdate.getSeconds()).slice(-2);
 
-	var datetime = day + "/" + month + "/" + year + " at " + hours + ":" + minutes + ":" + seconds;
+	var datetime = day + "." + month + "." + year + " at " + hours + ":" + minutes + ":" + seconds;
 	return datetime;
     }
 
